# hermes

./: Cargo.toml  README.md
sample/: hello.txt
src/: app.rs  cli.rs  main.rs
src/backend/: mod.rs
src/tui/: event.rs  mod.rs  ui.rs
